--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-.env
+
 # dependencies
 /node_modules
 /.pnp
@@ -12,7 +12,7 @@
 # next.js
 /.next/
 /out/
-
+.next
 # production
 /build
 
@@ -27,7 +27,8 @@ yarn-error.log*
 
 # local env files
 .env*.local
-
+.env
+env
 # vercel
 .vercel
 
